<!--
  ~ Copyright (c) 2019. Birgit Schoenauer
  ~
  ~ Licensed under the Creative Commons Attribution-NonCommercial-NonDerivatives 4.0 International License.
  ~ See file 'LICENSE.md' or https://creativecommons.org/licenses/by-nc-nd/4.0/ for full license details.
  -->

<resources>

    <!--TEXT & DESC-->
    <string name="app_name">Miscreant</string>
    <string name="app_name_desc">You\'re playing the game Miscreant.</string>
    <string name="archer_power">RANGED</string>
    <string name="archer_power_desc">Archer\'s power is ranged attack</string>
    <string name="archer_power_detail">RANGED\nAttack monsters \nin 2nd row.</string>
    <string name="art">Art</string>
    <string name="art_title_desc">Art sources</string>
    <string name="artists_1">Graphics by Firas Najar, Graphic Goodies, Mike Mac, Zuhria</string>
    <string name="artists_1_desc">Artists Zuhria, Firas Najar, Mike Mac, Graphic Goodies, Olga Bikmullina</string>
    <string name="artists_2">Free Game Items Pack #1 and #2</string>
    <string name="artists_2_desc">Free Game Item Pack</string>
    <string name="audio">Audio</string>
    <string name="audio_title_desc">Audio settings</string>
    <string name="audio_text">No Audio yet.</string>
    <string name="audio_text_desc">These are the audio sources...</string>
    <string name="cards_in_deck">/56</string>
    <string name="cards_in_deck_desc">cards in deck</string>
    <string name="cards_in_deck_left">XX</string>
    <string name="cards_in_deck_left_desc">left cards in deck</string>
    <string name="credits_desc">Credits Page</string>
    <string name="current_health">12</string>
    <string name="current_health_desc">current hero health value</string>
    <string name="dead_hero_desc">Rest in peace, my hero</string>
    <string name="default_name">hero</string>
    <string name="dungeon">DUNGEON</string>
    <string name="dungeons_accomplished_desc">You finished that many dungeons</string>
    <string name="dungeon_desc">dungeon</string>
    <string name="dungeon_points_desc">You get that many points for finished dungeons</string>
    <string name="dungeons_title">Dungeons</string>
    <string name="final_score_title">SCORE</string>
    <string name="final_score_desc">Title final score</string>
    <string name="game_background">game_background</string>
    <string name="gamedesign_text">Gameconcept, -design and Code \nBirgit Schönauer</string>
    <string name="gamedesign_desc">Gamedesign by Birgit Schönauer</string>
    <string name="heart_desc">heart image</string>
    <string name="hero_archer_desc">the archer hero</string>
    <string name="hero_desc">Your hero\'s type</string>
    <string name="hero_name_desc">This is you hero\'s name</string>
    <string name="hero_viking_desc">the viking hero</string>
    <string name="highscores_title_desc">This is the highscore menu</string>
    <string name="icons_text">Icons \'Arrow Down\', \'Settings\' <a href="https://icons8.de/">icons8.de</a></string>
    <string name="icons_text_desc">Some icons from icons8.de</string>
    <string name="inspiration_card_crawl">Card Crawl by Tinytouchtales</string>
    <string name="inspiration_card_crawl_desc">This game was inspired by Card Crawl.</string>
    <string name="inspiration_scoundrel">Scoundrel by Zach Gage, Kurt Bieg</string>
    <string name="inspiration_scoundrel_desc">This game was inspired by Scoundrel.</string>
    <string name="inspiration_title">Inspiration</string>
    <string name="inspiration_text_desc">This game was inspired by Scoundrel and Card Crawl.</string>
    <string name="language_en" translatable="false">en</string>
    <string name="language_de" translatable="false">de</string>
    <string name="left_items">Left items</string>
    <string name="left_items_desc">Value of left items at game\'s end</string>
    <string name="license_cc3">Adapted Color<a href="https://creativecommons.org/licenses/by/3.0/">License CC 3.0</a></string>
    <string name="license_desc">Creative Commons License 3.0</string>
    <string name="lost_game_title">OUCH !</string>
    <string name="lost_game_title_desc">Damn, you died...</string>
    <string name="max_health">12</string>
    <string name="max_health_desc">max health value</string>
    <string name="max_health_title">Max. Health</string>
    <string name="max_health_points_desc">Points for your hero\'s max health value</string>
    <string name="name">Hero\'s name</string>
    <string name="position_desc">highscore rank</string>
    <string name="potential_health_desc">Your hero\'s health, if you play this card</string>
    <string name="pre_game">Get ready!</string>
    <string name="pre_game_desc">Choose your play mode</string>
    <string name="rip">"Off to Walhalla, "</string>
    <string name="score_title">PERFORMANCE</string>
    <string name="score_title_desc">Score title</string>
    <string name="settings_title_desc">Settings</string>
    <string name="skull_desc">skull image</string>
    <string name="special_use_desc">display for power uses</string>
    <string name="victory_message">You are worthy,</string>
    <string name="victory_message_desc">You are a worthy hero</string>
    <string name="viking_power">SMITH</string>
    <string name="viking_power_desc">Viking\'s special is SMITH</string>
    <string name="viking_power_detail">SMITH\nWeapon damage +1 \n(3 x per deck)</string>
    <string name="won_game_title">VICTORY !!</string>

    <!--BUTTON & DESC-->
    <string name="back_button_desc">back button</string>
    <string name="credits">CREDITS</string>
    <string name="credits_button_desc">Credits button</string>
    <string name="deal_new">deal new</string>
    <string name="deal_new_desc">deal new dungeon cards, suffer 1 damage</string>
    <string name="button_delete_all">Delete All</string>
    <string name="button_delete_desc">Press this button to delete this highscore list.</string>
    <string name="highscore">HIGHSCORES</string>
    <string name="highscore_button_desc">Highscores button</string>
    <string name="button_keep_best">Keep Best 15</string>
    <string name="button_keep_desc">Press this button and only the 15 best highscores in this list are kept</string>
    <string name="ok">OK</string>
    <string name="ok_button_desc">Submit button</string>
    <string name="play">PLAY</string>
    <string name="play_button_desc">Play button</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_button_desc">Settings button</string>
    <string name="start_game_button">FOR HONOR AND GLORY</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="tutorial_button_desc">Tutorial button</string>

    <!--SLIDER & DESC-->
    <string name="volume">Volume</string>
    <string name="music_volume_desc">Music volume progressbar</string>
    <string name="sound_volume_desc">Sound volume progressbar</string>
    <string name="volume_music_desc">Music volume</string>
    <string name="volume_sound_desc">Sound volume</string>

    <!--SWITCH & DESC-->
    <string name="music">MUSIC</string>
    <string name="music_toggle_desc">Music Toggle</string>
    <string name="sound">SOUND</string>
    <string name="sound_toggle_desc">Sound Toggle</string>

    <!--EDIT TEXT DESC-->
    <string name="name_input_desc">Enter your hero\'s name</string>

    <!--RADIOBUTTON, GROUP & DESC-->
    <string name="easy">easy</string>
    <string name="easy_desc">Radiobutton for easy game</string>
    <string name="english">english</string>
    <string name="english_button_desc">Radiobutton to select english as language</string>
    <string name="language">Language</string>
    <string name="language_title_desc">Language settings</string>
    <string name="language_group_desc">Radiobuttons for language selection</string>
    <string name="game_difficulty">Difficulty</string>
    <string name="game_difficulty_title_desc">Game difficulty</string>
    <string name="game_difficulty_group_desc">Radiobuttons for game difficulty selection</string>
    <string name="german">german</string>
    <string name="german_button_desc">Radiobutton to select german as language</string>
    <string name="hard">badass</string>
    <string name="hard_desc">Radiobutton for hard game</string>
    <string name="normal">normal</string>
    <string name="normal_desc">Radiobutton for normal game</string>
    <string name="hero_progress">HERO PROGRESS</string>
    <string name="hero_progress_desc">hero progress in game</string>

    <!--CARDS & DESC-->
    <string name="attack">ATTACK</string>
    <string name="attack_desc">This monster is attacking if in front before new cards are dealt.</string>
    <string name="backpack_desc">backpack stores an item card</string>
    <string name="card_consumed_img_desc">This item is used up.</string>
    <string name="card_disabled_desc">If you choose this action, this card will be moved to target location.</string>
    <string name="card_equip_visual_desc">Your selected card will be placed here.</string>
    <string name="card_img_desc">Image on card</string>
    <string name="card_rip">R.I.P.</string>
    <string name="card_rip_desc">This monster is dead: RIP.</string>
    <string name="card_title_desc">This is the card\'s title.</string>
    <string name="discard_desc">discard a card</string>
    <string name="dungeon_left_back_desc">dungeon card in left back</string>
    <string name="dungeon_middle_back_desc">dungeon card in middle back</string>
    <string name="dungeon_right_back_desc">dungeon card in right back</string>
    <string name="dungeon_left_front_desc">dungeon card in left front</string>
    <string name="dungeon_middle_front_desc">dungeon card in middle front</string>
    <string name="dungeon_right_front_desc">dungeon card in right front</string>
    <string name="equipleft_desc">left hero hand</string>
    <string name="equipright_desc">right hero hand</string>
    <string name="hero_card_desc">hero card</string>

    <!--IN APP OUTPUT-->
    <string name="fragmentManager_null">"FragmentManager NULL on "</string>

    <!--DESIGN PLACEHOLDER-->
    <string name="placeholder_card_title">CARD TITLE</string>
    <string name="placeholder_card_value">10</string>
    <string name="placeholder_name">WWWWWWWWWW</string>

    <!--DECK PATHS-->
    <string name="easy_deck_path">testdeck.json</string>
    <string name="medium_deck_path">testdeck.json</string>
    <string name="hard_deck_path">testdeck.json</string>

    <string name="easy_deck_one">easy_deck_1.json</string>
    <string name="easy_deck_two">easy_deck_2.json</string>
    <string name="easy_deck_three">easy_deck_3.json</string>

    <string name="normal_deck_one">normal_deck_1.json</string>
    <string name="normal_deck_two">normal_deck_2.json</string>
    <string name="normal_deck_three">normal_deck_3.json</string>

    <!--ANIMATION PROPERTIES-->
    <string name="translationY">translationY</string>
    <string name="rotationX">rotationX</string>
    <string name="alpha">alpha</string>
    <string name="scaleX">scaleX</string>
    <string name="scaleY">scaleY</string>

</resources>
